--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,13 @@
         android:theme="@style/Theme.MyAndroidApp"
         tools:targetApi="31">
         <activity
+            android:name=".TermList"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainScreen"
             android:exported="true">
             <intent-filter>
