--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,15 @@
         android:theme="@style/Theme.MyAndroidApp"
         tools:targetApi="31">
         <activity
-            android:name=".TermList"
+            android:name=".UI.TermList"
+            android:parentActivityName=".UI.MainScreen"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainScreen"
+            android:name=".UI.MainScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
