--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,31 @@
         android:theme="@style/Theme.MyAndroidApp"
         tools:targetApi="31">
         <activity
-            android:name=".UI.TermList"
-            android:parentActivityName=".UI.MainScreen"
+            android:name=".UI.TermAdd"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".UI.TermEdit"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".UI.TermDetails"
+            android:exported="false"
+            android:parentActivityName=".UI.TermList">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".UI.TermList"
+            android:exported="false"
+            android:parentActivityName=".UI.MainScreen">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
