--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,36 @@
         tools:targetApi="31">
         <activity
             android:name=".UI.AssessmentsList"
-            android:exported="false">
+            android:exported="false"
+            android:label="Assessments List"
+            android:parentActivityName=".UI.MainScreen">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".UI.AssessmentDetails"
-            android:exported="false">
+            android:exported="false"
+            android:label="Assessment Details"
+            android:parentActivityName=".UI.AssessmentsList">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".UI.CourseDetails"
-            android:exported="false">
+            android:exported="false"
+            android:label="Course Details"
+            android:parentActivityName=".UI.CourseList">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".UI.CourseList"
-            android:exported="false">
+            android:exported="false"
+            android:label="Courses List"
+            android:parentActivityName=".UI.MainScreen">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
